infrastructure/device-plugin/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: device-plugin
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: device-plugin
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: device-plugin-generic-device-plugin-ingress
  namespace: device-plugin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: device-plugin
      app.kubernetes.io/name: generic-device-plugin
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
